# blockcopy

./: .flake8  Makefile  README.md  blockcopy.py  checksum_to_text.py  pyproject.toml
.github/workflows/: test-from-github.yml  test-with-uv.yml  test.yml
tests/: conftest.py  test_checksum.py  test_copy.py  test_version.py
