[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockcopy"
version = "0.0.1"
authors = [
    { name="Petr Messner", email="petr.messner+github-blockcopy@gmail.com" },
]
description = "Copy large files and block devices effeciently over network"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/messa/blockcopy"
Repository = "https://github.com/messa/blockcopy"
Documentation = "https://github.com/messa/blockcopy"
