[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockcopy"
version = "0.0.2"
authors = [
    { name="Petr Messner", email="petr.messner+github-blockcopy@gmail.com" },
]
description = "Copy large files and block devices efficiently over network"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

[project.scripts]
blockcopy = "blockcopy:main"

[tool.setuptools]
py-modules = ["blockcopy"]
include-package-data = true

[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "pytest>=7.4.4",
]

[project.urls]
Home = "https://github.com/messa/blockcopy"
Repository = "https://github.com/messa/blockcopy"
Documentation = "https://github.com/messa/blockcopy"
